# posix_sharememory

./: CMakeLists.txt  README.md  shared_datastruct.hpp
include/: sharememory.hpp
read/: main.cpp
src/: sharememory.cpp
write/: main.cpp
